# QueueMe_base

./: .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  ADMIN_FEATURES_SUMMARY.md  ADMIN_PANEL_IMPLEMENTATION.md  ADMIN_PANEL_README.md  API_DOCUMENTATION_README.md  API_DOCUMENTATION_SUMMARY.md  API_DOMAIN_SETUP.md  AUDIT_LOGGING_DOCUMENTATION.md  CAMPAIGN_MANAGEMENT_IMPLEMENTATION.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIXES.md  DEVELOPMENT_GUIDE.md  DOMAIN_DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.celery  EMAIL_TEMPLATES_IMPLEMENTATION.md  IMPLEMENTATION_STATUS_REPORT.md  MOYASAR_FIREBASE_IMPLEMENTATION_SUMMARY.md  MOYASAR_INTEGRATION_SUMMARY.md  MOYASAR_PAYMENT_SETUP.md  NOTIFICATION_DASHBOARD_IMPLEMENTATION.md  NOTIFICATION_TEMPLATES_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  POSTGRESQL_SETUP.md  PRE_PRODUCTION_TEST_PLAN.md  PRODUCTION_READINESS_SUMMARY.md  PUSH_NOTIFICATION_TEMPLATES_IMPLEMENTATION.md  QUEUE_ME_DJANO_BACKEND_FULL_STRUCTURE.md  QUEUE_ME_EXPLAINATION.md  README.md  REDIS_SETUP.md  SECURITY_FIXES.md  SMS_TEMPLATES_IMPLEMENTATION.md  SYSTEM_REQUIREMENTS.md  (+81 more)
algorithms/: __init__.py
api/: __init__.py
apps/: __init__.py
backup_custom_admin/: admin.py  admin.py.backup  urls.py  views.py
core/: __init__.py  apps.py  mixins.py  monkey_patches.py
docker/: Dockerfile.backend  Dockerfile.celery  docker-compose.yml
docs/: scheduling_system.md
integration_tests/: README.md  notification_integration_test.py  payment_integration_test.py
load_tests/: README.md  booking_load_test.py  (+3 more)
(+913 files in other folders)
