[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "queueme"
version = "1.0.0"
description = "Queue Me - Advanced Queue and Appointment Management Platform"
authors = ["Queue Me Team <info@queueme.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.0.0"
djangorestframework = "^3.13.0"
djangorestframework-simplejwt = "^5.0.0"
django-cors-headers = "^3.10.0"
drf-yasg = "^1.20.0"
celery = "^5.2.0"
redis = "^4.0.0"
channels = "^3.0.0"
channels-redis = "^3.3.0"
django-celery-beat = "^2.2.0"
django-celery-results = "^2.2.0"
daphne = "^3.0.0"
psycopg2-binary = "^2.9.0"
Pillow = "^9.0.0"
gunicorn = "^20.1.0"
boto3 = "^1.20.0"
django-storages = "^1.12.0"
twilio = "^7.0.0"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-django = "^4.5.2"
pytest-cov = "^2.12.1"
black = "^21.9b0"
isort = "^5.9.3"
flake8 = "^4.0.1"
pre-commit = "^2.15.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
